--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:lib": "ng build video-call-lib",
+    "build:lib:prod": "ng build video-call-lib --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "server": "node server.js"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -29,11 +30,8 @@
     "@capacitor/keyboard": "8.0.0",
     "@capacitor/status-bar": "8.0.0",
     "@ionic/angular": "^8.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.22.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
-    "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -64,6 +62,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^18.2.1",
     "typescript": "~5.9.0"
   },
   "description": "An Ionic project"
